completed setting up the API and everything is operational; the navigation bar is currently being worked on.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "BORDERRADIUS",
         "extralight",
-        "FONTFAMILY"
+        "FONTFAMILY",
+        "videocam"
     ]
 }
