--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "@types/react-native__assets": "^1.0.3",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
