done creating the home screen and every buttom has a function that movies to other screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "BORDERRADIUS",
         "extralight",
         "FONTFAMILY",
+        "Marginated",
+        "movieid",
+        "textinput",
         "videocam"
     ]
 }
